--- a/app/assets/stylesheets/components/_home_footer.scss
+++ b/app/assets/stylesheets/components/_home_footer.scss
@@ -1,16 +1,16 @@
 .home-footer {
-  display: flex;
+  display:         flex;
   justify-content: space-between;
-  align-item: center;
-  width: 100%;
+  align-item:      center;
+  width:           100%;
 }
 
 .social-media-links {
-  display: flex;
-  align-items: center;
-  font-size: 30px;
+  display:         flex;
+  align-items:     center;
+  font-size:       30px;
   justify-content: space-around;
-  width: 100%;
+  width:           100%;
 
   i {
     color: rgba(220, 220, 220, 0.3);
@@ -21,22 +21,22 @@
   }
 }
 
-// ------------------------- Iformations --------------------------
+// ------------------------- Informations --------------------------
 .blink-text-menu {
   list-style-type: none;
 
   li {
     a {
-      position: relative;
-      display: flex;
-      padding: 6px;
-      color: white;
-      font-family: Lato, sans-serif;
+      position:        relative;
+      display:         flex;
+      padding:         6px;
+      color:           white;
+      font-family:     Lato, sans-serif;
       text-decoration: none;
 
       span {
-        position: relative;
-        overflow: hidden;
+        position:   relative;
+        overflow:   hidden;
         transition: 0.6s;
 
         .out {
@@ -44,9 +44,9 @@
         }
 
         .in {
-          position: absolute;
-          left: 0;
-          opacity: 0;
+          position:  absolute;
+          left:      0;
+          opacity:   0;
           transform: translateX(100%);
         }
       }
@@ -54,12 +54,12 @@
       &:hover {
         span {
           .out {
-            opacity: 0;
+            opacity:   0;
             transform: translateX(-100%);
           }
 
           .in {
-            opacity: 1;
+            opacity:   1;
             transform: translateX(0);
           }
         }
