--- a/app/assets/stylesheets/components/_link.scss
+++ b/app/assets/stylesheets/components/_link.scss
@@ -10,3 +10,15 @@
 .pointer {
   cursor: pointer;
 }
+
+
+.selected {
+  font-weight: bolder;
+  font-size:   18px;
+}
+
+.unselected {
+  font-weight: lighter;
+  font-size:   16px;
+}
+
