--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -20,9 +20,11 @@
     <div class='container container-parties-index'>
       <% @parties.each do |party| %>
           <% party.artists.push(Artist.find_by name: "Unknown") if party.artists.empty?  %>
-          <%# link_to party_path(party), class: "link-no-underline" do %>
+          <% if current_user.nil? %>
             <%= render 'shared/profile_card', party: party, track: party.artists.first.track_url %>
-          <%# end %>
+          <% else %>
+            <%= render 'shared/profile_card_logged', party: party, track: party.artists.first.track_url %>
+          <% end %>
       <% end %>
     </div>
   </div>
