--- a/app/views/shared/_home_card.html.erb
+++ b/app/views/shared/_home_card.html.erb
@@ -9,16 +9,16 @@
   <div class="event-picture">
     <img src="https://www.residentadvisor.net<%= party.image_url %>" onerror="this.src='https://images.unsplash.com/photo-1513670144176-2211a82b531f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80';" alt="Missing Image" />
   </div>
-  <h3 class="title m-3"><%= party.name %></h3>
+  <h3 class="title m-3"><%= party.name.truncate(50) %></h3>
   <ul class="infos mt-5 ">
-    <li>
+    <li class="d-flex align-items-center">
       <i class="far fa-user text-light"></i>
       <% party.artists.first(3).each do |artist| %>
         <%= artist.name %>
       <% end %>
     </li>
-    <li><i class="far fa-calendar-alt text-light"></i><%= party.start_date.strftime("%d %B %Y") %>  at  <%= party.start_time %></li>
-    <li><i class="fab fa-houzz text-light"></i><%= party.venue_name %> - <%= party.venue_location %></li>
+    <li class="d-flex align-items-center"><i class="far fa-calendar-alt text-light"></i><%= party.start_date.strftime("%d %B %Y") %>  at  <%= party.start_time %> <br> <%= party.end_date.strftime("%d %B %Y") %> at <%= party.end_time %></li>
+    <li class="d-flex align-items-center"><i class="fab fa-houzz text-light"></i><%= party.venue_name %> - <%= party.venue_location %></li>
   </ul>
 </div>
 
