--- a/app/views/shared/_profile_card_logged.html.erb
+++ b/app/views/shared/_profile_card_logged.html.erb
@@ -1,4 +1,4 @@
-<div class="profile-card">
+<div class="profile-card-logged">
   <%= link_to party_path(party), class: "profile-content-grid link-no-underline" do %>
     <div class="profile-card-left">
       <img src="https://www.residentadvisor.net<%= party.image_url %>" onerror="this.src='https://images.unsplash.com/photo-1513670144176-2211a82b531f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80';" alt="Missing Image" />
@@ -12,9 +12,10 @@
         <li class="d-flex align-items-center"><i class="fab fa-houzz text-light"></i><%= party.venue_name %> — <%= party.venue_location.truncate(80) %></li>
       </ul>
     </div>
-    <div class="profile-card-right pr-2">
+    <div class="profile-card-right">
       <%= render 'shared/soundcloud_player', soundcloud_id: track %>
     </div>
+    <%= render 'shared/star_button', party: party %>
   <% end %>
 </div>
 
