--- a/app/views/shared/_star_button.html.erb
+++ b/app/views/shared/_star_button.html.erb
@@ -1,4 +1,4 @@
-<% if !current_user.nil? %>
+<% unless current_user.nil? %>
   <% if current_user.attended?(party) %>
     <%= link_to attending_path(current_user.get_attending_from_party(party)), method: :delete  do %>
       <div class="star-button">
