--- a/app/assets/stylesheets/pages/_signup.scss
+++ b/app/assets/stylesheets/pages/_signup.scss
@@ -1,4 +1,5 @@
 .container-form-sign-up {
+    margin-top:      30px;
     justify-content: center;
     align-items:     center;
     width:           45%;
