--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -70,3 +70,18 @@
 }
 
 
+
+// -----------------------------------------------------
+
+@media(max-width: 768px) {
+  .home-cards {
+    display:         flex;
+    flex-direction: column;
+  }
+}
+
+
+
+
+
+
