--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -5,10 +5,10 @@
     <%= render 'shared/home_loader' %>
     <h3>Find easily the best music event for you</h3>
     <div class="call-to-action">
-      <%= link_to new_preference_path , {class: "btn btn-secondary"} do %>
+      <%= link_to new_preference_path , {class: "btn btn-secondary mt-3"} do %>
         Audio Quizz
       <% end %>
-      <%= link_to parties_path , {class: "btn btn-secondary"} do %>
+      <%= link_to parties_path , {class: "btn btn-secondary mt-3"} do %>
         Find a party
       <% end %>
     </div>
