adding utilisation of Techno2U to User 2

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
                     prompt: "Your age",
                     input_html: { autocomplete: "your age" } %>
         <%= f.input :use, label: 'What is your main use of Techno2U ?',
-                    collection: [ 'Find a party' , 'Discover new artists' ],
+                    collection: [ 'Find a party' , 'Discover new artists' , 'Listen to music'],
                     prompt: "Chose a way using Techno2U",
                     input_html: { autocomplete: "Chose a way using Techno2U" } %>
       </div>
