added preferences to the web app

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,3 +18,9 @@
     <% end %>
   </div>
 </div>
+
+<% unless @user.nil? %>
+  <% if @user.preferences.empty? %>
+    <%= render 'shared/modal_preferences' %>
+  <% end %>
+<% end %>
