--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,11 +31,11 @@
         <%= f.input :age,
                     required: true,
                     collection: 15..99,
-                    prompt: "Your age",
+                    placeholder: "Your age",
                     input_html: { autocomplete: "your age" } %>
         <%= f.input :use, label: 'What is your main use of Techno2U ?',
                     collection: [ 'Find a party' , 'Discover new artists' , 'Listen to music'],
-                    prompt: "Chose a way using Techno2U",
+                    placeholder: "Why Techno2U?",
                     input_html: { autocomplete: "Chose a way using Techno2U" } %>
       </div>
 
