je dechire tout

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -15,6 +15,7 @@
       <div class="container-li m-3 d-flex justify-content-center">
         <%= paginate @parties %>
       </div>
+      <button class="parties-i-might-like">Parties I might like</button>
       </div>
     </div>
     <div class='container container-parties-index'>
