MARCO FULL STACK

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container container-form-sign-up">
 
   <div class="sign-up-picture">
-    <img src="https://piknicelectronik.com/public/piknic/uploads/images/5ce85eba04923.jpeg" alt="">
+    <%= cl_image_tag("88e9f8fd65dcf8fb1c5f962f12e5e26b")%>
   </div>
 
   <div class='form-infos'>
