--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container container-form-sign-up">
 
   <div class="sign-up-picture">
-    <%= cl_image_tag("88e9f8fd65dcf8fb1c5f962f12e5e26b")%>
+    <%= cl_image_tag("https://res.cloudinary.com/dozzulcez/image/upload/v1592407866/er5tv9vjmdtilruyeb1u.png")%>
   </div>
 
   <div class='form-infos'>
